--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^1.0.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -21,42 +22,42 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.424.0",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@auth/mongodb-adapter": "^1.0.0",
-    "axios": "^1.4.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
+    "lucide-react": "^0.424.0",
     "mailgun.js": "^9.2.1",
     "mongodb": "^5.8.0",
     "mongoose": "^7.4.4",
+    "next": "14.2.5",
     "next-auth": "^4.23.1",
     "next-plausible": "^3.11.3",
     "next-sitemap": "^4.2.2",
     "nextjs-toploader": "^1.4.2",
     "nodemailer": "^6.9.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "recharts": "^2.12.7",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.4",
+    "@types/mdx": "^2.0.7",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.7",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@types/jest": "^29.5.4",
-    "@types/mdx": "^2.0.7",
-    "@types/mongoose": "^5.11.97",
-    "@types/react-syntax-highlighter": "^15.5.7",
-    "autoprefixer": "^10.4.15"
+    "typescript": "^5"
   }
 }
