--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nodemailer": "^6.9.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
