--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "recharts": "^2.12.7",
+    "stripe": "^16.7.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.2"
